# wifi-coprocessor

./: AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c61  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.cache/clangd/index/: com.c.F1A59AF2B2AB613B.idx  com.h.7D9B68BCFE7877C4.idx  com_queue.c.566673B0E9EE79C8.idx  esp_littlefs.c.DE10805E42DEA2FE.idx  esp_littlefs.h.977DCAF9569BAF9E.idx  lfs.c.4260D99E38464512.idx  lfs.h.1ABAE94361D866DB.idx  lfs_config.c.6C29D5BEE8470401.idx  lfs_config.h.41A9D3B7CC9DB4E7.idx  lfs_util.c.00B5515AFC2B5EC4.idx  lfs_util.h.2E537FAE6B51D0E9.idx  littlefs_api.h.F4D53C4EE91F3E9B.idx  littlefs_esp_part.c.301A440BA387BF44.idx  main.c.13543EB2284CC402.idx
host/stm32-host-esp32-wcp/: .mxproject  CMakeLists.txt  stm32-host-esp32-wcp.ioc
host/stm32-host-esp32-wcp/Core/Inc/: stm32h7xx_hal_conf.h
host/stm32-host-esp32-wcp/Core/Src/: gpio.c  main.c  quadspi.c
host/stm32-host-esp32-wcp/cmake/stm32cubemx/: CMakeLists.txt
host/stm32-host-esp32-wcp/wcp/: wcp.c  wcp.h  wcp_conf.h  wcp_qspi.c  wcp_qspi.h  wcp_spi.c  wcp_spi.h
host/stm32-wcp/: .mxproject  CMakeLists.txt  stm32-wcp.ioc
host/stm32-wcp/Core/Inc/: main.h  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  com.c  com.h  com_events.h  com_queue.c  idf_component.yml  main.c  qspi.c  qspi.h  tpl.c  tpl.h  tpl_spi.c  tpl_spi.h  tpl_usart.c  tpl_usart.h  transport_layer.c  transport_layer.h  types.h
(+5 files in other folders)
